src/lib/testcases/fails/basic/fn_orpheline_sig/main.rk
d: a => a

f: Int64 => Float64
f: a -> a

main: -> f 2.2
